--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             </div>
         </div>
     </header>
+
     <main>
+
         <section class="section sec2 about" id="about">
             <div class="main-title">
                 <h2>About 
@@ -53,7 +55,7 @@
                 </h2>
             </div>
 
-            <div class="main-container">
+            <div class="about-container">
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
@@ -63,28 +65,53 @@
                         reprehenderit incidunt aliquam culpa tempora, aliquid accusamus sapiente vitae deserunt delectus!
                     </p>
                     <div class="btn-container">
-                    <a href="#" class="main-btn">
-                        <span class="btn-text">Download CV</span>
-                        <span class="btn-icon">
-                            <i class="fas fa-download"></i>
-                        </span>
-                    </a>
+                        <a href="#" class="main-btn">
+                            <span class="btn-text">Download CV</span>
+                            <span class="btn-icon">
+                                <i class="fas fa-download"></i>
+                            </span>
+                        </a>
+                    </div>
                 </div>
-                </div>
+
                 <div class="right-about">
+
                     <div class="about-item">
                         <div class="about-text">
                             <p class="large-txt">123 +</p>
                             <p class="small-txt">Projects <br> Completed</p>
                         </div>
                     </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-txt">123 +</p>
+                            <p class="small-txt">Projects <br> Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-txt">123 +</p>
+                            <p class="small-txt">Projects <br> Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-txt">123 +</p>
+                            <p class="small-txt">Projects <br> Completed</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
+
         <section class="section sec3 portfolio" id="portfolio"></section>
+
         <section class="section sec4 blogs" id="blogs"></section>
+
         <section class="section sec5 contact" id="contact"></section>
     </main>
+
 
     <div class="controlls">
         <div class="control control-1 active-btn" data-id="home">
