--- a/index.html
+++ b/index.html
@@ -164,9 +164,218 @@
                     </div>
                 </div>
             </div>
+            <h4 class="stat-title">My timeline</h4>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010 - present</p>
+                    <h5>Web Developer<span> - Nagoya</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, suscipit? 
+                        Repudiandae sed non ex numquam in quis aliquam consectetur sapiente?
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010 - present</p>
+                    <h5>Web Developer<span> - Nagoya</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, suscipit? 
+                        Repudiandae sed non ex numquam in quis aliquam consectetur sapiente?
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010 - present</p>
+                    <h5>Web Developer<span> - Nagoya</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, suscipit? 
+                        Repudiandae sed non ex numquam in quis aliquam consectetur sapiente?
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010 - present</p>
+                    <h5>Web Developer<span> - Nagoya</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, suscipit? 
+                        Repudiandae sed non ex numquam in quis aliquam consectetur sapiente?
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010 - present</p>
+                    <h5>Web Developer<span> - Nagoya</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, suscipit? 
+                        Repudiandae sed non ex numquam in quis aliquam consectetur sapiente?
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2010 - present</p>
+                    <h5>Web Developer<span> - Nagoya</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, suscipit? 
+                        Repudiandae sed non ex numquam in quis aliquam consectetur sapiente?
+                    </p>
+                </div>
+            </div>
+
         </section>
 
-        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>Port 
+                    <span>folio</span>
+                    <span class="bg-text">my Works</span>
+                </h2>
+            </div>
+
+            <p class="port-text">
+                Here is  some of my work that I've done in various programming languages.
+            </p>
+
+            <div class="portfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="assets/portfolio.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="assets/portfolio.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="assets/portfolio.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="assets/portfolio.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="assets/portfolio.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="assets/portfolio.jpeg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="www.google.coim" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
 
         <section class="section sec4 blogs" id="blogs"></section>
 
