--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
         </section>
 
-        <section class="section sec3 portfolio" id="portfolio">
+        <section class="section sec3" id="portfolio">
             <div class="main-title">
                 <h2>Port 
                     <span>folio</span>
@@ -377,9 +377,164 @@
             </div>
         </section>
 
-        <section class="section sec4 blogs" id="blogs"></section>
+        <section class="section sec4" id="blogs">
+            <div class="blogs-content">
+                <div class="main-title">
+                    <h2>
+                        My <span>Blogs</span>
+                        <span class="bg-text">
+                            My Blogs
+                        </span>
+                    </h2>
+                </div>
 
-        <section class="section sec5 contact" id="contact"></section>
+                <div class="blogs">
+                    <div class="blog">
+                        <img src="assets/portfolio.jpeg" alt="">
+                        <div class="blog-text">
+                            <h4>How to create Your Own website</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Amet eos totam reprehenderit voluptatem esse maiores, aspernatur commodi! 
+                                 Porro!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="assets/portfolio.jpeg" alt="">
+                        <div class="blog-text">
+                            <h4>Self-study jounhey path</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Amet eos totam reprehenderit voluptatem esse maiores, aspernatur commodi! 
+                                 Porro!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="assets/portfolio.jpeg" alt="">
+                        <div class="blog-text">
+                            <h4>Initiating your own company starup</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Amet eos totam reprehenderit voluptatem esse maiores, aspernatur commodi! 
+                                 Porro!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section sec5 contact" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+                    <h2>
+                        Contact <span>Me</span>
+                        <span class="bg-text">
+                            Contact
+                        </span>
+                    </h2>
+                </div>
+
+                <div class="contact-content">
+                    <div class="left-contact">
+                        <h4>Contact me Here</h4>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit
+                            . Aspernatur ullam pariatur at mollitia laborum dolorem 
+                            nesciunt nisi sed. A, labore.
+                        </p>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    Location
+                                </div>
+                                <p>
+                                    : Japan. Nagoya
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                   Email
+                                </div>
+                                <p>
+                                    : developer2023@hotmail.com
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    Education
+                                </div>
+                                <p>
+                                    : Oxford University
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    Mobile Number
+                                </div>
+                                <p>
+                                    : 99 0987 4437
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    Languages
+                                </div>
+                                <p>
+                                    : English, Japanese, Portugues and Frances
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contact-icons">
+                            <div class="contact-icon">
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="right-contact">
+                        <form action="" class="contact-form">
+                            <div class="input-control i-c-2">
+                                <input type="text" required placeholder="Your Name">
+                                <input type="email" required placeholder="Your Email">
+                            </div>
+                            <div class="input-control">
+                                <input type="text" required placeholder="Enter Subject">
+                            </div>
+                            <div class="input-control">
+                                <textarea placeholder="Message here..." name="" id="" cols="15" rows="8"></textarea>
+                            </div>
+                            <div class="submit-btn">
+                                <a href="#" class="main-btn">
+                                    <span class="btn-text">Download CV</span>
+                                    <span class="btn-icon">
+                                        <i class="fas fa-download"></i>
+                                    </span>
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
