--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-map-marker-alt"></i>
+                                    <i class="fas fa-envelope"></i>
                                    Email
                                 </div>
                                 <p>
@@ -466,7 +466,7 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-map-marker-alt"></i>
+                                    <i class="fas fa-user-graduate"></i>
                                     Education
                                 </div>
                                 <p>
@@ -475,7 +475,7 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-map-marker-alt"></i>
+                                    <i class="fas fa-phone"></i>
                                     Mobile Number
                                 </div>
                                 <p>
@@ -484,11 +484,11 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-map-marker-alt"></i>
+                                    <i class="fas fa-globe-africa"></i>
                                     Languages
                                 </div>
                                 <p>
-                                    : English, Japanese, Portugues and Frances
+                                    : English, Japanese
                                 </p>
                             </div>
                         </div>
@@ -554,6 +554,11 @@
         <div class="control control-5" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
+    </div>
+
+
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
     </div>
 
     <script src="js/main.js"></script>
